--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -55,7 +55,7 @@
       </div>
 
       <form action="/trade" method="POST">
-        <input type="hidden" name="message" value="AAPL">
+        <input type="hidden" name="stockName" value="AAPL">
         <button type="submit">Send besked</button>
       </form>
 
