--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,12 +30,10 @@
     </ul>
 
     <div id="profileBox_id">
-      <h2 id="profiloplysninger_id">Profiloplysninger</h2>
-      <hr>
-        <input placeholder="e-mail" style="width: 310px;">
+      <h2 id="profiloplysninger_id">Skift Adgangskode</h2>
+        <input placeholder="Ny Adgangskode" id="adgangskode_id" style="width: 300px;">
         <br>
-        <input placeholder="Brugernavn" id="brugernavn_id">
-        <input placeholder="Adgangskode" id="adgangskode_id">
+        <input placeholder="Bekræft Adgangskode" id="bekræftAdgangskode_id" style="width: 300px;">
     </div>
     <br>
     <button id="gemÆndringer_id">Gem ændringer</button>
