--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
   <meta charset="UTF-8">
   <title>Transaktionsoversigt</title>
   <link rel="stylesheet" href="/transactions_style.css">
 </head>
+
 <body>
-  <h1>Transaktioner for konto: <%= account.name %></h1>
+  <h1>Transaktioner for konto: <%= account.name %>
+  </h1>
 
   <table>
     <thead>
@@ -19,22 +22,48 @@
       </tr>
     </thead>
     <tbody>
-      <% if (transactions.length === 0) { %>
-        <tr><td colspan="5">Ingen transaktioner fundet.</td></tr>
-      <% } else { %>
-        <% transactions.forEach(trans => { %>
-          <tr>
-            <td><%= trans.created_at ? new Date(trans.created_at).toISOString().split('T')[0] : 'Ukendt dato' %></td>
-            <td><%= trans.type %></td>
-            <td><%= trans.amount.toFixed(2) %></td>
-            <td><%= trans.currency %></td>
-            <td><%= trans.balance_after.toFixed(2) %></td>
-          </tr>
-        <% }) %>
-      <% } %>
+      <% if (transactions.length===0) { %>
+        <tr>
+          <td colspan="5">Ingen transaktioner fundet.</td>
+        </tr>
+        <% } else { %>
+          <% transactions.forEach(trans=> { %>
+            <tr>
+              <td>
+                <%= trans.created_at ? new Date(trans.created_at).toISOString().split('T')[0] : 'Ukendt dato' %>
+              </td>
+              <td>
+                <%= trans.type %>
+              </td>
+              <td>
+                <%= trans.amount.toFixed(2) %>
+              </td>
+              <td>
+                <%= trans.currency %>
+              </td>
+              <td>
+                <%= trans.balance_after.toFixed(2) %>
+              </td>
+            </tr>
+            <% }) %>
+              <% } %>
     </tbody>
   </table>
 
   <a href="/accounts">Tilbage til konti</a>
+  <script>
+    // Find formularen med logud-knappen
+    const logoutForm = document.querySelector('form[action="/logout"]');
+
+    if (logoutForm) {
+      logoutForm.addEventListener("submit", function (event) {
+        const confirmed = confirm("Er du sikker på, at du vil logge ud?");
+        if (!confirmed) {
+          event.preventDefault(); // Forhindrer formularen i at blive sendt
+        }
+      });
+    }
+  </script>
 </body>
+
 </html>
