--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -37,9 +37,9 @@
     <div class="container">
         <div class="header">
             <h2>Portfolios</h2>
-            <button id="addPortfolioBtn" class="primary-btn">
-                <span class="material-symbols-outlined">add</span>Tilføj Portefølje
-            </button>
+            <a href="/addportfolio" class="primary-btn" style="text-decoration: none; color: white;">
+                <span class="material-symbols-outlined">add</span> Tilføj Portefølje
+            </a>
         </div>
 
 
