--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,7 +34,7 @@
   </ul>
 
   <div id="profileBox_id">
-    <h2 id="profiloplysninger_id">Profiloplysninger</h2>
+    <h2 id="profiloplysninger_id">Skift Kode</h2>
     <form id="passwordForm">
       <input type="hidden" id="userId" value="<%= userId %>">
       <input placeholder="Ny Adgangskode" id="newPassword" style="width: 300px;" required>
